# nova-wallet-android

./: .editorconfig  .gitignore  .gitmodules  NOTICE  README.md  allmodules.gradle  build.gradle  gradle.properties  index.html  jacoco.gradle  lint.xml  settings.gradle  tests.gradle
.github/scripts/: pr_comment_extract_data.py  run_balances_test.sh  run_instrumental_tests.sh
.github/workflows/: android.yml  android_build.yml  appium-mobile-tests.yml  balances_test.yml  check_build_machine.yml  check_networks.yml  destribute_app_to_play_store.yml  integration_tests.yml  manual_firebase_distribution.yml  manual_github_release.yml  networks_test.sh  pr_workflow.yml  publish_github_release.yml  pull_request.yml  push-develop.yml  push_develop.yml  run_integration_tests.sh  update_tag.yml
.github/workflows/build-app/: android_build.yml
.github/workflows/install/: action.yml
.github/workflows/release/: pr_workflow.yml
5/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
5/export/: influxDbData.txt  prometheusData.txt
5/history/: retry-trend.json
5/widgets/: categories-trend.json  duration.json  environment.json  executors.json  severity.json  summary.json
6/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
6/export/: influxDbData.txt  prometheusData.txt
6/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
6/widgets/: executors.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
app/: .gitignore  build.gradle  develop_key.jks
bindings/hydra-dx-math/: build.gradle
bindings/hydra-dx-math/rust/: Cargo.toml
bindings/hydra-dx-math/rust/src/: lib.rs
bindings/merlin/: build.gradle
bindings/merlin/rust/: Cargo.toml
bindings/merlin/rust/src/: lib.rs
bindings/metadata_shortener/: build.gradle
bindings/metadata_shortener/rust/: Cargo.toml
bindings/metadata_shortener/rust/src/: lib.rs
caip/: build.gradle
common/: build.gradle
common-networking/: build.gradle
common/libs/: renderscript-toolkit.aar
core-api/: build.gradle
core-db/: build.gradle
feature-account-api/: build.gradle
feature-account-impl/: build.gradle
feature-account-migration/: build.gradle
feature-ahm-api/: build.gradle
feature-ahm-impl/: build.gradle
feature-assets/: build.gradle
feature-banners-api/: build.gradle
feature-banners-impl/: build.gradle
feature-buy-api/: build.gradle
feature-buy-impl/: build.gradle
feature-cloud-backup-api/: build.gradle
feature-cloud-backup-impl/: build.gradle
feature-cloud-backup-test/: build.gradle
feature-crowdloan-api/: build.gradle
feature-crowdloan-impl/: build.gradle
feature-currency-api/: build.gradle
feature-currency-impl/: build.gradle
feature-dapp-api/: build.gradle
feature-dapp-core/: build.gradle
feature-dapp-impl/: build.gradle
feature-deep-link-building/: build.gradle
feature-deep-linking/: build.gradle
feature-external-sign-api/: build.gradle
feature-external-sign-impl/: build.gradle
feature-gift-api/: build.gradle
feature-gift-impl/: build.gradle
feature-governance-api/: build.gradle
feature-governance-impl/: build.gradle
feature-ledger-api/: build.gradle
feature-ledger-core/: build.gradle
feature-ledger-impl/: build.gradle
feature-multisig/operations/: build.gradle
feature-nft-api/: build.gradle
feature-nft-impl/: build.gradle
feature-onboarding-api/: build.gradle
feature-onboarding-impl/: build.gradle
feature-pay-api/: build.gradle
feature-pay-impl/: build.gradle
feature-proxy-api/: build.gradle
feature-proxy-impl/: build.gradle
feature-push-notifications/: build.gradle
feature-settings-api/: build.gradle
feature-settings-impl/: build.gradle
feature-splash/: build.gradle
feature-staking-api/: build.gradle
feature-staking-impl/: build.gradle
feature-swap-api/: build.gradle
feature-swap-core/: build.gradle
feature-swap-core/api/: build.gradle
feature-swap-impl/: build.gradle
feature-update-notification-impl/: build.gradle
feature-versions-api/: build.gradle
feature-versions-impl/: .gitignore  build.gradle
feature-vote/: build.gradle
feature-wallet-api/: build.gradle
feature-wallet-connect-api/: build.gradle
feature-wallet-connect-impl/: build.gradle
feature-wallet-impl/: build.gradle
feature-xcm/api/: build.gradle
feature-xcm/impl/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
hydra-dx-math/: build.gradle
hydra-dx-math/bindings/: Cargo.toml
hydra-dx-math/bindings/src/: lib.rs
last-history/: duration-trend.json  history-trend.json  history.json
renderscript-toolkit/: build.gradle
runtime/: build.gradle
scripts/: secrets.gradle
test-shared/: build.gradle
updates/v1/: entrypoint_dev.json  entrypoint_release.json
web3names/: build.gradle
(+9829 files in other folders)
