[package]
authors = ['Novasama Technologies']
edition = '2021'
license = 'Apache 2.0'
name = "metadata-shortener-java"
repository = 'https://github.com/nova-wallet/nova-wallet-android'
version = "0.1.0"

[dependencies]
array-bytes = "6.2.2"
merkleized-metadata = { git = "https://github.com/bkchr/merkleized-metadata", default-features = false, features=["std"]}
jni = { version = "0.17.0", default-features = false }
frame-metadata = { version = "16.0.0", features = [ "current" ] }
codec = { package = "parity-scale-codec", version = "3.6.9", features = [ "derive" ] }

[profile.release]
strip = true
lto = true
opt-level = "s"

[lib]
name = "metadata_shortener_java"
crate_type = ["cdylib"]